src/main/java/io/github/jhipster/sample/web/rest/errors/EmailAlreadyUsedException.java
package io.github.jhipster.sample.web.rest.errors;

public class EmailAlreadyUsedException extends BadRequestAlertException {

    public EmailAlreadyUsedException() {
        super(ErrorConstants.EMAIL_ALREADY_USED_TYPE, "Email address already in use", "userManagement", "emailexists");
    }
}
